--- a/style.css
+++ b/style.css
@@ -330,3 +330,30 @@ button:hover {
 #match-display button:hover {
     background-color: #218838;
 }
+
+
+#game-board {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(3, 100px);
+    gap: 2px;
+    margin-left: 25%;
+  }
+  
+  .cell {
+    width: 100px;
+    height: 100px;
+    background-color: #8daadf;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    border: 1px solid #ccc;
+    cursor: pointer;
+  }
+  
+  .cell.disabled {
+    cursor: not-allowed;
+    background-color: #ddd;
+  }
+  
